--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Project</title>
+    <title> HayLine.am </title>
 </head>
 <body>
    <header>
@@ -12,8 +12,8 @@
       <nav>
         <ul class="menu">
         <li> <a href="project1.html" class="active" > Գլխավոր </a></li>
-        <li> <a href="about.html" class=""> Մեր մասին </a></li>
-        <li> <a href="contact.html" class=""> Կոնտակտ  </a> </li>
+        <li> <a href="aboutt.html" class=""> Մեր մասին </a></li>
+        <li> <a href="contactt.html" class=""> Կոնտակտ  </a> </li>
         </ul>
       </nav>
    </header>
