--- a/aboutt.html
+++ b/aboutt.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="project5.css">
+    <link rel="stylesheet" href="project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About </title>
 </head>
 <body>
    <header>
+      <div class="logo"> HayLine.am </div>
       <nav>
         <ul class="menu">
-        <li> <a href="home.html" class="" >  Home </a></li>
-        <li> <a href="about.html" class=""> About </a></li>
-        <li> <a href="contact.html" class=""> Contact </a> </li>
+         <li> <a href="project1.html" class="" > Գլխավոր </a></li>
+        <li> <a href="aboutt.html" class="active"> Մեր մասին </a></li>
+        <li> <a href="contactt.html" class=""> Կոնտակտ  </a> </li>
         </ul>
       </nav>
    </header>
+   <main class="about-section">
+      <img src="images/israel-andrade-YI_9SivVt_s-unsplash.jpg" alt="Մեր մասին">
+      <div class="about-text">
+        <h2> Մեր մասին</h2>
+        <p> 
+         Բարի գալուստ HayLine.am նորությունների և իրադարձությունների հուսալի աղբյուր:
+         Մեր առաքելությունն է բերել արագ, ճշգրիտ և կարևոր լուրերը՝ անմիջապես Հայաստանից
+          և աշխարհի տարբեր անկյուններից:
+        HayLine.am-ը պատրաստ է լինել Ձեր վստահելի ուղեկիցը՝ ծանոթանալու ժամանակակից
+        նորություններին, սոցիալական, տնտեսական, մշակութային և սպորտային իրադարձություններին:
+         Մենք ձգտում ենք ներկայացնել լուրերը օբյեկտիվ, հավաստի և թափանցիկ ձևով՝ ուշադրություն
+          դարձնելով ամեն մանրուքին:
+       Մեր թիմը բաղկացած է պրոֆեսիոնալ լրագրողներից, վերլուծաբաններից և տեխնոլոգիական
+        մասնագետներից, ովքեր մեկ նպատակ ունեն՝ ապահովել Ձեզ թարմ ու կարևոր տեղեկատվությամբ, 
+        որպեսզի կարողանաք տեղեկացված որոշումներ ընդունել և քայլել ժամանակակից աշխարհի
+         թելադրանքով:
+        </p>
+      </div>
+   </main>
 <footer>
  <ul>
     <li> Armenia,Tavush,Ijevan Valence 16 </li>
