--- a/contactt.html
+++ b/contactt.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="project5.css">
+    <link rel="stylesheet" href="project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact </title>
 </head>
 <body>
    <header>
+      <div class="logo"> HayLine.am </div>
       <nav>
         <ul class="menu">
-        <li> <a href="home.html" class="" >  Home </a></li>
-        <li> <a href="about.html" class=""> About </a></li>
-        <li> <a href="contact.html" class=""> Contact </a> </li>
+         <li> <a href="project1.html" class="" > Գլխավոր </a></li>
+        <li> <a href="aboutt.html" class=""> Մեր մասին </a></li>
+        <li> <a href="contactt.html" class="active"> Կոնտակտ  </a> </li>
         </ul>
       </nav>
    </header>
+   <main class="contact-section">
+      <form>
+        <h2>Կապ մեզ հետ</h2>
+        <div class="input-group">
+         <label> Անուն Ազգանուն </label>
+         <input type="text" placeholder="Անուն Ազգանուն" required>
+      </div>
+      <div class="input-group">
+         <label> Հեռախոսահամար </label>
+         <input type="tel" placeholder="Հեռախոսահամար " required>
+      </div>
+      <div class="input-group">
+         <label> էլ․ հասցե </label>
+         <input type="email" placeholder="էլ․ հասցե" required>
+      </div>
+      <div class="input-group">
+         <label> Տարիք </label>
+         <input type="number" placeholder="Տարիք " min="0" max="120">
+      </div>
+        <div class="input-group gender-group">
+         <label> Սեռ </label>
+         <div class="gender-options">
+         <label> <input type="radio" name="gender" value="male" >Տղամարդ </label>
+         <label> <input type="radio" name="gender" value="female" > Կին</label>
+      </div>
+        </div>
+        <div class="input-group">
+         <label>Նամակ․․ </label>
+        <textarea placeholder="Նամակ․․" rows="5"> </textarea>
+      </div>
+      <button type="submit">Ուղարկել </button>
+      </form>
+   </main>
 <footer>
  <ul>
     <li> Armenia,Tavush,Ijevan Valence 16 </li>
