--- a/project1.html
+++ b/project1.html
@@ -34,7 +34,7 @@
       <p>
          Apple-ը պաշտոնապես ներկայացրել է iPhone 17 Pro մոդելը, որն ունի թափանցիկ
           էկրան և ներկառուցված արհեստական ինտելեկտի օգնական՝ “Vision AI” ։Նոր սարքը կթողարկվի
-           հոկտեմբերին և կարժենա մոտ $1299։
+           հոկտեմբերին և կարժենա մոտ $1299:
       </p>
     </article>
      <article class="news">
@@ -55,7 +55,9 @@
        ապահովեցին հաղթանակը։
       </p>
     </article>
+<div class="animation"></div>
    </main>
+   <img id="pic" src="images/erevan.jpg" >
 <footer>
  <ul>
     <li> Armenia,Tavush,Ijevan Valence 16 </li>
