--- a/project1.html
+++ b/project1.html
@@ -1,21 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="project5.css">
+    <link rel="stylesheet" href="project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title> HayLine.am </title>
 </head>
 <body>
+  <script src="index.js"></script>
    <header>
+      <div class="logo"> HayLine.am  </div>
       <nav>
         <ul class="menu">
-        <li> <a href="home.html" class="" >  Home </a></li>
-        <li> <a href="about.html" class=""> About </a></li>
-        <li> <a href="contact.html" class=""> Contact </a> </li>
+        <li> <a href="project1.html" class="active" > Գլխավոր </a></li>
+        <li> <a href="aboutt.html" class=""> Մեր մասին </a></li>
+        <li> <a href="contactt.html" class=""> Կոնտակտ  </a> </li>
         </ul>
       </nav>
    </header>
+   <main class="news-section">
+    <article class="news">
+      <img src="images/erevan.jpg " alt="news1">
+      <h2> Երևան 2807-ամյակ</h2>
+      <p>
+         Երևանը այս տարի նշում է իր 2807-ամյակը՝ հոկտեմբերի 12-ին:
+         Այդ կապակցությամբ անցկացվում են լայնածավալ տոնական միջոցառումներ՝
+         սկսած վաղ առավոտից մինչև գիշեր։ Դրանց թվում՝ բացօթյա համերգներ, 
+         մշակութային փառատոններ, արվեստի ցուցահանդեսներ և քաղաքային միջոցառումներ։  
+      </p>
+    </article>
+    <article class="news">
+      <img src="images/sam-grozyan-J1qp-1ymyTo-unsplash.jpg " alt="news2">
+      <h2> Նոր Iphone 17 pro </h2>
+      <p>
+         Apple-ը պաշտոնապես ներկայացրել է iPhone 17 Pro մոդելը, որն ունի թափանցիկ
+          էկրան և ներկառուցված արհեստական ինտելեկտի օգնական՝ “Vision AI” ։Նոր սարքը կթողարկվի
+           հոկտեմբերին և կարժենա մոտ $1299։
+      </p>
+    </article>
+     <article class="news">
+      <img src="images/digitec.webp" alt="news3">
+      <h2> Դիջիթեք 2025</h2>
+      <p> Հոկտեմբերի 10-12-ը Երևանում անցկացվել է «Դիջիթեք 2025» տեխնոլոգիական ցուցահանդեսը,
+          որտեղ ներկայացվել են արհեստական բանականություն, վիրտուալ իրականություն և սմարթ 
+          սարքեր։ Միջոցառմանը մասնակցել են տեղական և միջազգային ընկերություններ։
+      </p>
+    </article>
+     <article class="news">
+      <img src="images/football1.jpg" alt="news4">
+      <h2> Հայաստան-Հունգարիա </h2>
+      <p>
+       Հոկտեմբերի 11-ին կայացած ԱԱ-2026-ի ընտրական փուլի երրորդ տուրի խաղում Հայաստանի 
+       ազգային հավաքականը Բուդապեշտում 0:2 հաշվով պարտվել է Հունգարիային։ Առաջին խաղակեսը 
+       ավարտվել էր 0:0 հաշվով, սակայն երկրորդ կեսում հունգարացիները երկու գոլ խփեցին և 
+       ապահովեցին հաղթանակը։
+      </p>
+    </article>
+    <div class="animation"></div>
+   </main>
+    <img id="pic" src="images/erevan.jpg" >
 <footer>
  <ul>
     <li> Armenia,Tavush,Ijevan Valence 16 </li>
