--- a/index5.html
+++ b/index5.html
@@ -4,17 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ <style>
+    #square {
+        width: 150px;
+        height: 150px;
+        background-color: blue;
+        margin: 50px;
+        /* border-radius: 10px;
+        transition: background-color 0.3s; */
+    }
+    #clickText {
+        width: 300px;
+        padding: 20px;
+        border: 2px solid black;
+        text-align: center;
+        cursor: pointer;
+        background-color: lightblue
+    }
+    #hoverText {
+      width: 300px;
+      margin-top:50px;
+      padding: 20px;
+      border: 2px solid black;
+      text-align: center;
+      cursor: pointer;
+      background-color: lightyellow;
+      transition: background-color 0.3s;
+    }
+
+    /*  css */
+
+  #animation {                
+  width: 80px;
+  height: 80px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: red;
+  transition: width 2s, height 4s, background-color 3s;
+  } 
+
+ #animation:hover {          
+  width: 300px;
+  height: 300px;
+  background-color: orange; 
+}
+#special {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  animation-name: myAnimation;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes myAnimation {
+  from {background-color: red;}
+  to {background-color: yellow;}
+}
+ </style>
 </head>
 <body>
-    <script src="index5.html"></script>
     <div id="add">
    <ul id="List"> </ul> 
     </div>
    <input type="text" id="item_text" style="width:280px; height:30px">
    <button onclick="addListItem()">Add List</button>
-
 <p>Պարագրաֆ 1</p>
 <p>Պարագրաֆ 2</p>
 <p>Պարագրաֆ 3</p>
+
+<div id="square"> </div>
+<div id="clickText"> Սեղմիր ինձ </div>
+<div id="hoverText">Տեքստի վրա պահիր մկնիկը</div>
+<div id="animation"></div>
+<div id="special"></div>
+<script src="index5.js"></script>
+
 </body>
 </html>
